--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t ryu/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t ryu9527/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true ryu/react-test npm test
+  - docker run -e CI=true ryu9527/react-test npm test
 
 after_success:
-  - docker build -t ryu/multi-client ./client
-  - docker build -t ryu/multi-nginx ./nginx
-  - docker build -t ryu/multi-server ./server
-  - docker build -t ryu/multi-worker ./worker
+  - docker build -t ryu9527/multi-client ./client
+  - docker build -t ryu9527/multi-nginx ./nginx
+  - docker build -t ryu9527/multi-server ./server
+  - docker build -t ryu9527/multi-worker ./worker
   # Log in to the docker CLI
   - echo "\$DOCKER_PASSWORD" | docker login -u "\$DOCKER_ID" -- password-stdin
   # Take those images and push them to docker hub
-  - docker push ryu/multi-client
-  - docker push ryu/multi-nginx
-  - docker push ryu/multi-server
-  - docker push ryu/multi-worker
+  - docker push ryu9527/multi-client
+  - docker push ryu9527/multi-nginx
+  - docker push ryu9527/multi-server
+  - docker push ryu9527/multi-worker
